--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,44 @@
 server.port=5000
 
-spring.datasource.url=jdbc:mysql://localhost:3306/camaat
+spring.datasource.url=jdbc:mysql://localhost:3306/tayfas
 spring.datasource.username=root
-spring.datasource.password=rorott
+spring.datasource.password=142536
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql = true
 
-## App jwt Properties
+## App Properties
 app.jwt.title=Bearer 
 app.jwt.life-time=999999999
-app.jwt.secret-key=fakesecrsetkeysecretfakekey
+app.jwt.secret-key=fakesecretkeysecretfakekey
 
-spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=10MB
 
 
 ##aws s3 configuration
-jsa.aws.access_key_id=
-jsa.aws.secret_access_key= 
-jsa.s3.bucket=
-jsa.s3.region= 
-aws.photoUrl=
+jsa.aws.access_key_id=AKIA6HXLIUOIH2YCZXWX
+jsa.aws.secret_access_key=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
+jsa.s3.bucket=my-spring-ulvu
+jsa.s3.region=us-east-2
+aws.photoUrl=https://my-spring-ulvu.s3.us-east-2.amazonaws.com/
 
 
+#spring.datasource.url=jdbc:mysql://camabase.cgj73dkk82ta.us-east-2.rds.amazonaws.com/camat
+#spring.datasource.username=root
+#spring.datasource.password=root142536
+#
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.show-sql = true
+#spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.properties.max_allowed_packet=2000
 
 
+#spring.datasource.url=jdbc:mysql://160.153.129.209:3306/camaat
+#
+#spring.datasource.username=cmaatdb
+#spring.datasource.password=142536
+#
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.show-sql = false
+#spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.max_allowed_packet=2000
