--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=5000
 
-spring.datasource.url=jdbc:mysql://localhost:3306/tayfas
+spring.datasource.url=jdbc:mysql://localhost:3306/edadi
 spring.datasource.username=root
 spring.datasource.password=142536
 spring.jpa.hibernate.ddl-auto=update
@@ -19,9 +19,9 @@ spring.servlet.multipart.max-request-size=10MB
 jsa.aws.access_key_id=
 jsa.aws.secret_access_key=
 jsa.s3.bucket=
-jsa.s3.region=
-
+jsa.s3.region=us-east-2
 aws.photoUrl=https://my-spring-ulvu.s3.us-east-2.amazonaws.com/
+
 
 
 
