--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=5000
 
-spring.datasource.url=jdbc:mysql://localhost:3306/edadi
-spring.datasource.username=root
-spring.datasource.password=142536
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql = true
+#spring.datasource.url=jdbc:mysql://localhost:3306/tayfas
+#spring.datasource.username=root
+#spring.datasource.password=142536
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql = true
 
 ## App Properties
 app.jwt.title=Bearer 
@@ -15,13 +15,25 @@ spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=10MB
 
 
+
 ##aws s3 configuration
 jsa.aws.access_key_id=
-jsa.aws.secret_access_key=
+jsa.aws.secret_access_key= 
 jsa.s3.bucket=
-jsa.s3.region=us-east-2
+jsa.s3.region= 
 aws.photoUrl=https://my-spring-ulvu.s3.us-east-2.amazonaws.com/
 
 
 
 
+
+spring.datasource.url=
+spring.datasource.username= 
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.show-sql = false
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.max_allowed_packet=2000
+
+spring.datasource.hikari.maxLifeTime =100000
+spring.datasource.testWhileIdle = true
