--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port=5000
+server.error.include-message=always
+server.error.include-binding-errors=always
 
-spring.datasource.url=jdbc:mysql://localhost:3306/tayfas
+
+spring.datasource.url=jdbc:mysql://localhost:3306/edadi
 spring.datasource.username=root
 spring.datasource.password=142536
 spring.jpa.hibernate.ddl-auto=update
