Improve article service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,10 @@
 server.port=5000
-server.error.include-message=always
-server.error.include-binding-errors=always
-
 
 spring.datasource.url=jdbc:mysql://localhost:3306/edadi
 spring.datasource.username=root
 spring.datasource.password=142536
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql = true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql = true
 
 ## App Properties
 app.jwt.title=Bearer 
@@ -17,16 +14,35 @@ app.jwt.secret-key=fakesecretkeysecretfakekey
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=10MB
 
+spring.jpa.open-in-view=true
 
 
 ##aws s3 configuration
 jsa.aws.access_key_id=
 jsa.aws.secret_access_key=
 jsa.s3.bucket=
-jsa.s3.region=
-aws.photoUrl=https://my-spring-ulvu.s3.us-east-2.amazonaws.com/
+jsa.s3.region=eu-central-1
+aws.photoUrl=https://edadi.s3.eu-central-1.amazonaws.com/
 
+
+
+server.error.include-message=always
+server.error.include-binding-errors=always
+
+#spring.datasource.url=
+#spring.datasource.username=
+#spring.datasource.password=
+#spring.jpa.database-platform=
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto =update
 spring.jpa.properties.max_allowed_packet=2000
 
-spring.datasource.hikari.maxLifeTime =100000
+
+spring.datasource.hikari.maxLifeTime =50000
+
 spring.datasource.testWhileIdle = true
+
+
+
+
+
