add mail sending

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,10 @@ spring.jpa.hibernate.ddl-auto =update
 spring.jpa.properties.max_allowed_packet=2000
 
 
-spring.datasource.hikari.maxLifeTime =50000
-
-spring.datasource.testWhileIdle = true
+## mail configuration
+spring.mail.host=
+spring.mail.port=
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
