--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,14 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-freemarker</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 <!--		<dependency>-->
 <!--			<groupId>org.assertj</groupId>-->
 <!--			<artifactId>assertj-core</artifactId>-->
