optimizing login feture

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,10 @@
 server.port=5000
 
-spring.datasource.url=jdbc:mysql://localhost:3306/edadi
-spring.datasource.username=root
-spring.datasource.password=142536
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql = true
-
 ## App Properties
 app.jwt.title=Bearer 
-app.jwt.life-time=999999999
 app.jwt.secret-key=fakesecretkeysecretfakekey
+app.jwt.access-token-session-time=99999999999
+app.jwt.refresh-token-session-time=999999999
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=10MB
@@ -20,20 +15,29 @@ spring.jpa.open-in-view=true
 jsa.aws.access_key_id=
 jsa.aws.secret_access_key=
 jsa.s3.bucket=
-jsa.s3.region=eu-central-1
-aws.photoUrl=https://edadi.s3.eu-central-1.amazonaws.com/
+jsa.s3.region=
+
+#aws.photoUrl=https://edadi.s3.eu-central-1.amazonaws.com/
 
 server.error.include-message=always
 server.error.include-binding-errors=always
 
+spring.datasource.url=jdbc:h2:mem:edadi.az
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=user
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto =update
+spring.jpa.hibernate.ddl-auto =create-drop
 spring.jpa.properties.max_allowed_packet=2000
+
+spring.datasource.hikari.maxLifeTime =50000
+spring.datasource.testWhileIdle = true
 
 
 ## mail configuration
 spring.mail.host=
-spring.mail.port=
+spring.mail.port=587
 spring.mail.username=
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
