change image upload feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=5000
 
-## App Properties
+## Security Properties
 app.jwt.title=Bearer 
-app.jwt.secret-key=fakesecretkeysecretfakekey
-app.jwt.access-token-session-time=99999999999
-app.jwt.refresh-token-session-time=999999999
+app.jwt.secret-key=fsasadassaa
+app.jwt.access-token-session-time=720000
+app.jwt.refresh-token-session-time=9999999
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=10MB
@@ -22,13 +22,12 @@ jsa.s3.region=
 server.error.include-message=always
 server.error.include-binding-errors=always
 
-spring.datasource.url=jdbc:h2:mem:edadi.az
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=user
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto =create-drop
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.show-sql = false
+spring.jpa.hibernate.ddl-auto =update
 spring.jpa.properties.max_allowed_packet=2000
 
 spring.datasource.hikari.maxLifeTime =50000
@@ -36,7 +35,7 @@ spring.datasource.testWhileIdle = true
 
 
 ## mail configuration
-spring.mail.host=
+spring.mail.host=mail.edadi.az
 spring.mail.port=587
 spring.mail.username=
 spring.mail.password=
