Fix upload file feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,42 +1,37 @@
-server.port=5000
+## Security properties
+app.jwt.title=
+app.jwt.secret-key=
+app.jwt.access-token-session-time=
+app.jwt.refresh-token-session-time=
 
-## Security Properties
-app.jwt.title=Bearer 
-app.jwt.secret-key=fsasadassaa
-app.jwt.access-token-session-time=720000
-app.jwt.refresh-token-session-time=9999999
-
-spring.servlet.multipart.max-file-size=100MB
-spring.servlet.multipart.max-request-size=10MB
-
-spring.jpa.open-in-view=true
-
-##aws s3 configuration
+## s3 properties
 jsa.aws.access_key_id=
 jsa.aws.secret_access_key=
 jsa.s3.bucket=
 jsa.s3.region=
 
-#aws.photoUrl=https://edadi.s3.eu-central-1.amazonaws.com/
-
+## server properties
+server.port=5000
 server.error.include-message=always
 server.error.include-binding-errors=always
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=10MB
+spring.jpa.open-in-view=true
 
+## db properties
 spring.datasource.url=
 spring.datasource.username=
 spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.show-sql = false
-spring.jpa.hibernate.ddl-auto =update
+spring.jpa.database-platform=
+spring.jpa.show-sql =
+spring.jpa.hibernate.ddl-auto =
 spring.jpa.properties.max_allowed_packet=2000
-
 spring.datasource.hikari.maxLifeTime =50000
 spring.datasource.testWhileIdle = true
 
-
-## mail configuration
-spring.mail.host=mail.edadi.az
-spring.mail.port=587
+## mail properties
+spring.mail.host=
+spring.mail.port=
 spring.mail.username=
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
