Enable spring profiles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,38 +1,1 @@
-## Security properties
-app.jwt.title=
-app.jwt.secret-key=
-app.jwt.access-token-session-time=
-app.jwt.refresh-token-session-time=
-
-## s3 properties
-jsa.aws.access_key_id=
-jsa.aws.secret_access_key=
-jsa.s3.bucket=
-jsa.s3.region=
-
-## server properties
-server.port=5000
-server.error.include-message=always
-server.error.include-binding-errors=always
-spring.servlet.multipart.max-file-size=100MB
-spring.servlet.multipart.max-request-size=10MB
-spring.jpa.open-in-view=true
-
-## db properties
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-spring.jpa.database-platform=
-spring.jpa.show-sql =
-spring.jpa.hibernate.ddl-auto =
-spring.jpa.properties.max_allowed_packet=2000
-spring.datasource.hikari.maxLifeTime =50000
-spring.datasource.testWhileIdle = true
-
-## mail properties
-spring.mail.host=
-spring.mail.port=
-spring.mail.username=
-spring.mail.password=
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.profiles.active = dev
