--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -5,18 +5,16 @@ spring:
     multipart:
       maxFileSize: 25MB
       maxRequestSize: 35MB
-  h2:
-    console:
-      enabled: true
-      path: /h2
-    datasource:
-      url: jdbc:h2:mem:mydatabase
-      username: saa
-      password: saas
-      driverClassName: org.h2.Driver
-    jpa:
-      hibernate:
-        ddlAuto: create-drop
+  datasource:
+    url: jdbc:mysql://localhost:3306/demo
+    username: root
+    password: Demo12345
+    driverClassName: com.mysql.jdbc.Driver
+  jpa:
+    hibernate:
+      dialect: org.hibernate.dialect.MySQL5Dialect
+      ddlAuto: update
+    showSql: true
   mail:
     host: dummy.edadi.az
     port: 587
