--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -6,7 +6,7 @@ spring:
       maxFileSize: 25MB
       maxRequestSize: 35MB
   datasource:
-    url: jdbc:mysql://localhost:3306/demo
+    url: jdbc:mysql://localhost:.3306/demo
     username: root
     password: Demo12345
     driverClassName: com.mysql.jdbc.Driver
@@ -40,7 +40,7 @@ app:
     accessTokenSessionTime: 999999999999
     refreshTokenSessionTime: 99999999999
   constants:
-    domain: http://edadi.az
+    domain: http://localhost:4200
     image-url: https://edadiaz.s3.eu-central-1.amazonaws.com/public
     user:
       default-image: default
