--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
+
 
     </dependencies>
 
