--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -6,51 +6,56 @@ spring:
       maxFileSize: 25MB
       maxRequestSize: 35MB
   datasource:
-    url: jdbc:mysql://localhost:.3306/demo
-    username: edauni
-    password: Demo142536
-    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:h2:mem:edauni
+    username: root
+    password: root
+    driverClassName: org.hibernate.dialect.MySQL8Dialect
   jpa:
     hibernate:
-      dialect: hibernate.dialect.MySQL5Dialectorg.
-      ddlAuto: update
+      globally_quoted_identifiers: true
+      ddlAuto: create-drop
     showSql: true
   mail:
     host: smtp.gmail.com
     port: 587
-    username: email@gmail.com
-    password: pass123
+    username: security@edauni.com
+    password: password
     properties:
       mail:
         smtp:
           auth: true
           starttls:
             enable: true
+  data:
+    elasticsearch:
+      host: 35.202.14.93
+      port: 9200
+      cluster-name: 99d1e62fc3ce
 jsa:
   aws:
-    accessKeyId: keyId
-    secretAccessKey: keypas
+    accessKeyId: secretkey
+    secretAccessKey: accesskey
   s3:
-    bucket: edauni/public
+    bucket: edauni
     region: eu-north-1
 app:
   jwt:
     title: Bearer
-    secretKey: secretkey123
+    secretKey: SEkkasdlaijhhsd
     accessTokenSessionTime: 999999999999
     refreshTokenSessionTime: 99999999999
   constants:
-    defaultSecurityMail: main@edauni.com
+    defaultSecurityMail: security@edauni.com
     appName: Edauni
-    domain: http://localhost:4200
-    image-url: https://edauni.s3.eu-north-1.amazonaws.com/public
+    domain: http://edauni.com
+    image-url: https://edauni.s3.eu-north-1.amazonaws.com/
     user:
       default-image: default
-      image-folder: /user
+      image-folder: public/user/
     blog:
       default-image: default
-      image-folder: /blog
+      image-folder: public/blog/
     file:
-      folder: /file
+      folder: public/file/
     image:
       size-s: thumbS
