--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,12 @@
             <version>2.3.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/io.minio/minio -->
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.5.7</version>
+        </dependency>
 
         <dependency>
             <groupId>com.h2database</groupId>
