--- a/src/main/resources/application-test.yaml
+++ b/src/main/resources/application-test.yaml
@@ -33,6 +33,12 @@ spring:
       host: localhost
       port: 9200
 #      cluster-name: 839c66f1568c
+minio:
+  endpoint: http://localhost:9000
+  access-key: minio-root-user
+  secret-key: minio-root-password
+  bucket-name: edadi
+
 jsa:
   aws:
     accessKeyId: qweq
