add github actions ci/cd

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>com.edauni</groupId>
     <artifactId>edauni</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>fresh</name>
     <description>Demo project for Spring Boot</description>
     <properties>
