--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,9 +27,11 @@ jobs:
     needs: build
     runs-on: [aws-ec2]
     steps:
-      - name: Pull Image from docker hub
-        run: docker pull ulvusuleymanov1/edadi:latest
+      - name: stop old container
+        run: docker stop edadi
       - name: Delete old container
         run: docker rm -f edadi
+      - name: Pull Image from docker hub
+        run: docker pull ulvusuleymanov1/edadi:latest
       - name: Run docker container
         run: docker run -d -p 5000:5000 --name edadi ulvusuleymanov1/edadi
